--- a/yew_node_graph_example/assets/common.scss
+++ b/yew_node_graph_example/assets/common.scss
@@ -1,13 +1,7 @@
-.node_finder{
-    display:none;
-    position:fixed;
-    left:0px;
-    top:0px;
-    width:200px;
-    height:100px;
+.node-graph-contextmenu{
     border:1px solid #000;
     background-color:#fff;
 }
-.node_finder li{
+.node-graph-contextmenu li *{
     cursor:pointer;
 }
