--- a/yew_node_graph_example/assets/light.scss
+++ b/yew_node_graph_example/assets/light.scss
@@ -1,3 +1,15 @@
+
+// Bang Wong's color template
+// https://rdcu.be/c5bHt
+$black: rgb(0, 0, 0);
+$orange: rgb(230, 159, 0);
+$skyblue: rgb(86, 180, 233);
+$bluish_green: rgb(0, 158, 115);
+$yellow: rgb(240, 228, 66);
+$blue:rgb(0, 114, 178);
+$vermillion:rgb(213, 94, 0);
+$reddish_purple:rgb(204, 121, 167);
+
 .graph-area{
     background-color: gainsboro;
     height: 100vh;
@@ -11,9 +23,25 @@
 }
 
 .port{
-    background-color: crimson;
-    border-color: crimson;
+    background-color: black;
+    border-color: black;
     &:hover{
         border-color: white;
     }
+}
+
+.port[data-type="Scalar"]{
+    background-color: $skyblue;
+    border-color: $skyblue;
+}
+.edge[data-type="Scalar"]{
+    stroke: $skyblue;
+}
+
+.port[data-type="Vec2"] {
+    background-color: $reddish_purple;
+    border-color: $reddish_purple;
+}
+.edge[data-type="Vec2"]{
+    stroke: $reddish_purple;
 }
