Add Box Selection

--- a/yew_node_graph_example/assets/light.scss
+++ b/yew_node_graph_example/assets/light.scss
@@ -41,3 +41,7 @@ $reddish_purple:rgb(204, 121, 167);
 .edge[data-type="Vec2"]{
     stroke: $reddish_purple;
 }
+.select_box{
+    border: 0.1em solid;
+    background-color: #EEE5;
+}
